Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body::before{
         <div class="icon"><img src="https://i.postimg.cc/kXsYwm76/unnamed.png" alt="Movies Icon" width="80" height="80"></div>
         <div class="content">
             <h2>YTV Pro</h2>
-            <p>مشاهدة أحدث الأفلام والمسلسلات</p>
+            <p>مشغل تطبيق ياسين tv </p>
             <div class="btn" onclick="increaseDownload('movies')">تحميل مباشر</div>
             <div class="counter">عدد التحميلات: <span id="movies-count">0</span></div>
         </div>
@@ -222,4 +222,5 @@ window.onload = function(){
 </script>
 
 </body>
+
 </html>
