--- a/index.html
+++ b/index.html
@@ -150,14 +150,22 @@ body::before{
 
     <!-- IPTV -->
     <div class="card">
-        <div class="icon"><img src="https://www.journaldugeek.com/resize/w112/O7ojly410dVNKUzG491uuSzQCyPRRqm99RsCuq2F.png" alt="IPTV Icon" width="80" height="80"></div>
-        <div class="content">
-            <h2>Yacine TV</h2>
-            <p>أفضل تطبيق لمشاهدة القنوات بجودة عالية</p>
-            <div class="btn" onclick="increaseDownload('iptv')">تحميل مباشر</div>
-            <div class="counter">عدد التحميلات: <span id="iptv-count">0</span></div>
+    <div class="icon">
+        <img src="https://www.journaldugeek.com/resize/w112/O7ojly410dVNKUzG491uuSzQCyPRRqm99RsCuq2F.png" alt="IPTV Icon" width="80" height="80">
+    </div>
+    <div class="content">
+        <h2>Yacine TV</h2>
+        <p>أفضل تطبيق لمشاهدة القنوات بجودة عالية</p>
+        
+        <a href="https://www.mediafire.com/file/ledsvueu7zxrame/com.ytv.player_14.0.xapk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
+            تحميل مباشر
+        </a>
+        
+        <div class="counter">
+            عدد التحميلات: <span id="iptv-count">0</span>
         </div>
     </div>
+</div>
 
     <!-- Movies -->
     <div class="card">
@@ -224,3 +232,4 @@ window.onload = function(){
 </body>
 
 </html>
+
