--- a/index.html
+++ b/index.html
@@ -173,10 +173,15 @@ body::before{
         <div class="content">
             <h2>YTV Pro</h2>
             <p>مشغل تطبيق ياسين tv </p>
-            <div class="btn" onclick="increaseDownload('movies')">تحميل مباشر</div>
-            <div class="counter">عدد التحميلات: <span id="movies-count">0</span></div>
+            <a href="https://www.mediafire.com/file/ks1fuwgci0n4rnk/مشغل+YTV.apk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
+            تحميل مباشر
+        </a>
+        
+        <div class="counter">
+            عدد التحميلات: <span id="iptv-count">0</span>
         </div>
     </div>
+</div>
 
     <!-- Browser -->
     <div class="card">
@@ -232,4 +237,5 @@ window.onload = function(){
 </body>
 
 </html>
+
 
