--- a/index.html
+++ b/index.html
@@ -185,14 +185,19 @@ body::before{
 
     <!-- Browser -->
     <div class="card">
-        <div class="icon">🌐</div>
+        <div class="icon"><img src="https://i.ibb.co/xS2jH68y/genral-tv-icon.png" alt="Movies Icon" width="80" height="80"></div>
         <div class="content">
-            <h2>متصفح TV</h2>
-            <p>متصفح سريع مخصص لأجهزة التلفاز</p>
-            <div class="btn" onclick="increaseDownload('browser')">تحميل مباشر</div>
-            <div class="counter">عدد التحميلات: <span id="browser-count">0</span></div>
+            <h2>General tv pro </h2>
+            <p>كود التفعيل 000  </p>
+            <a href="https://www.mediafire.com/file/ggkv4688885lm8t/GENRAL+TV+box.apk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
+            تحميل مباشر
+        </a>
+        
+        <div class="counter">
+            عدد التحميلات: <span id="iptv-count">0</span>
         </div>
     </div>
+</div>
 
     <!-- Movies -->
     <div class="card">
@@ -237,5 +242,6 @@ window.onload = function(){
 </body>
 
 </html>
+
 
 
