--- a/index.html
+++ b/index.html
@@ -201,16 +201,19 @@ body::before{
 
     <!-- Movies -->
     <div class="card">
-        <div class="icon">🎬</div>
+        <div class="icon"><img src="https://i.ibb.co/N6Dfnkmc/Screenshot-2026-02-23-144017.png" alt="Movies Icon" width="80" height="80"></div>
         <div class="content">
-            <h2>تطبيق أفلام</h2>
-            <p>مشاهدة أحدث الأفلام والمسلسلات</p>
-            <div class="btn" onclick="increaseDownload('movies')">تحميل مباشر</div>
-            <div class="counter">عدد التحميلات: <span id="movies-count">0</span></div>
+            <h2>PrimeTv V1.4.0 </h2>
+            <p>كود التفعيل 2026  </p>
+            <a href="https://www.mediafire.com/file/wtpzbx8wta6zn3z/PrimeTV+v1.4.0.apk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
+            تحميل مباشر
+        </a>
+        
+        <div class="counter">
+            عدد التحميلات: <span id="iptv-count">0</span>
         </div>
     </div>
 </div>
-
 <script>
 function increaseDownload(app){
 
@@ -242,6 +245,7 @@ window.onload = function(){
 </body>
 
 </html>
+
 
 
 
