Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ body::before{
         <div class="content">
             <h2>General tv pro </h2>
             <p>كود التفعيل 000  </p>
-            <a href="https://www.mediafire.com/file/ggkv4688885lm8t/GENRAL+TV+box.apk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
+            <a href="https://gofile.io/d/XJydW8" class="btn" onclick="increaseDownload('iptv')" target="_blank">
             تحميل مباشر
         </a>
         
@@ -245,6 +245,7 @@ window.onload = function(){
 </body>
 
 </html>
+
 
 
 
