--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body::before{
 
     <div class="header">
         <h1>محمد <span>إسلام</span>Google Tv </h1>
-        <div class="sub">تطبيقات TV Box</div>
+        <div class="sub">تطبيقات Google tv Android tv </div>
     </div>
 
     <!-- IPTV -->
@@ -245,6 +245,7 @@ window.onload = function(){
 </body>
 
 </html>
+
 
 
 
