--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ body::before{
         <div class="content">
             <h2>Cricfy TV V6.1 </h2>
             <p>كود التفعيل 2026  </p>
-            <a href="https://www.mediafire.com/file/wtpzbx8wta6zn3z/PrimeTV+v1.4.0.apk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
+            <a href="https://www.mediafire.com/file/sjkb8d4j3mgegyt/CRICFy_v6.1_2.apk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
             تحميل مباشر
         </a>
         
@@ -259,6 +259,7 @@ window.onload = function(){
 </body>
 
 </html>
+
 
 
 
