--- a/index.html
+++ b/index.html
@@ -228,11 +228,13 @@ body::before{
         </div>
     </div>
 </div>
-    <div class="icon"><img src="h" alt="Movies Icon" width="80" height="80"></div>
+    <!-- Movies -->
+    <div class="card">
+        <div class="icon"><img src="https://i.ibb.co/N6Dfnkmc/Screenshot-2026-02-23-144017.png" alt="Movies Icon" width="80" height="80"></div>
         <div class="content">
-            <h2>OTF TV V3.2 </h2>
-            <p> بدون كود تقعيل </p>
-            <a href="1" class="btn" onclick="increaseDownload('iptv')" target="_blank">
+            <h2>PrimeTv V1.4.0 </h2>
+            <p>كود التفعيل 2026  </p>
+            <a href="https://www.mediafire.com/file/wtpzbx8wta6zn3z/PrimeTV+v1.4.0.apk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
             تحميل 
         </a>
         
@@ -272,6 +274,7 @@ window.onload = function(){
 </body>
 
 </html>
+
 
 
 
