--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@ body::before{
 </div>
     <!-- Movies -->
     <div class="card">
-        <div class="icon"><img src="https://i.ibb.co/N6Dfnkmc/Screenshot-2026-02-23-144017.png" alt="Movies Icon" width="80" height="80"></div>
+        <div class="icon"><img src="https://blogger.googleusercontent.com/img/a/AVvXsEgurg7NMQpkYfWSFdmeve4T-pWEd35DqAFmp80BZVG61AkQGsq4Lv4R0X3BuT3BW9TlBiWq_HK1h7OokXgOVB2vrftC4rYo8K7TBwmrDfN5Ti_nxuoyXA8gJ16HEspvaePdrrZlFgKlJW3d3dR9RvnjiOh2tiN-wH7Ee3osB05huFsOLsPEqmPYA8F5Z5c=w320-h180-rw" alt="Movies Icon" width="80" height="80"></div>
         <div class="content">
-            <h2>PrimeTv V1.4.0 </h2>
-            <p>كود التفعيل 2026  </p>
-            <a href="https://www.mediafire.com/file/wtpzbx8wta6zn3z/PrimeTV+v1.4.0.apk/file" class="btn" onclick="increaseDownload('iptv')" target="_blank">
+            <h2>OTV TV V3.2 </h2>
+            <p>بدون كود تفعيل  </p>
+            <a href="https://download2391.mediafire.com/2ap8zkj6qalge9ui7wQmFZekc1fTn7dDBuZ_3AnqeZ83xeGNfqM3L38uiIGGgGWsXKaJbvy2M1W5q6R_m7QvPuc_uWP9apsDwpVfp7cHL7ve6S9Nq9WeL8Qxxqwl30Dt2u46b6qb_59lyX_tNaseei75w5pCmYlBMlMz__ZajHRb2w/01vdy97j803ofzg/OTF+TV+V3.2.apk" class="btn" onclick="increaseDownload('iptv')" target="_blank">
             تحميل 
         </a>
         
@@ -274,6 +274,7 @@ window.onload = function(){
 </body>
 
 </html>
+
 
 
 
